--- a/config/database.yml
+++ b/config/database.yml
@@ -4,12 +4,12 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: mysql
+  adapter: mysql2
   database: sample_app
   username: root
   password:
   host: localhost
-  socket = /tmp/mysql.sock
+  socket: /tmp/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -21,7 +21,7 @@ test:
   username: root
   password:
   host: localhost
-  socket = /tmp/mysql.sock
+  socket: /tmp/mysql.sock
   
 #production:
 #  adapter: sqlite3
