--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ development:
 # Do not set this db to the same as development or production.
 
 test:
-  adapter: mysql
+  adapter: mysql2
   database: sample_app
   username: root
   password:
